styles: Fixed overflow

--- a/src/styles/components/AuthorContainer.module.css
+++ b/src/styles/components/AuthorContainer.module.css
@@ -126,4 +126,8 @@
   .aboutContainer .underline {
     align-self: center;
   }
+
+  .aboutContainer div:last-child {
+    overflow: hidden;
+  }
 }
